// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`transformOas3Operation callback 1`] = `
Object {
  "callbacks": Array [
    Object {
      "callbackName": "myCallback",
      "extensions": Object {},
      "id": Any<String>,
      "iid": "cbId",
      "method": "post",
      "path": "http://example.com?transactionId={$request.body#/id}",
      "request": Object {
        "cookie": Array [],
        "headers": Array [],
        "path": Array [],
        "query": Array [],
      },
      "responses": Array [],
      "security": Array [],
      "securityDeclarationType": "inheritedFromService",
      "servers": Array [],
      "tags": Array [],
    },
  ],
  "extensions": Object {},
  "id": Any<String>,
  "iid": "opid",
  "method": "post",
  "path": "/subscribe",
  "request": Object {
    "body": Object {
      "contents": Array [
        Object {
          "encodings": Array [],
          "examples": Array [],
          "id": Any<String>,
          "mediaType": "application/json",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "properties": Object {
              "id": Object {
                "type": "string",
              },
            },
            "type": "object",
            "x-stoplight": Object {
              "id": Any<String>,
            },
          },
        },
      ],
      "id": Any<String>,
    },
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "securityDeclarationType": "inheritedFromService",
  "servers": Array [],
  "tags": Array [],
}
`;

exports[`transformOas3Operation given no tags should translate operation with empty tags array 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": Any<String>,
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "securityDeclarationType": "inheritedFromService",
  "servers": Array [],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given operation servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": Any<String>,
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "securityDeclarationType": "inheritedFromService",
  "servers": Array [
    Object {
      "id": Any<String>,
      "name": "title",
      "url": "operation/server",
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given path servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": Any<String>,
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "securityDeclarationType": "inheritedFromService",
  "servers": Array [
    Object {
      "id": Any<String>,
      "name": "title",
      "url": "path/server",
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;

exports[`transformOas3Operation given some tags should translate operation with those tags 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": Any<String>,
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "securityDeclarationType": "inheritedFromService",
  "servers": Array [],
  "summary": "summary",
  "tags": Array [
    Object {
      "id": Any<String>,
      "name": "tag1",
    },
  ],
}
`;

exports[`transformOas3Operation given spec servers should translate operation with those servers 1`] = `
Object {
  "deprecated": true,
  "description": "descr",
  "extensions": Object {},
  "id": Any<String>,
  "iid": "opid",
  "method": "get",
  "path": "/users/{userId}",
  "request": Object {
    "cookie": Array [],
    "headers": Array [],
    "path": Array [],
    "query": Array [],
  },
  "responses": Array [],
  "security": Array [],
  "securityDeclarationType": "inheritedFromService",
  "servers": Array [
    Object {
      "id": Any<String>,
      "name": "title",
      "url": "spec/server",
    },
  ],
  "summary": "summary",
  "tags": Array [],
}
`;
